<resources>
    <string name="app_name">Enigma 7.0</string>
    <string name="instructions_n">Instructions\n</string>
    <string name="q1">Q1.</string>
    <string name="submit">Submit</string>
    <string name="hint_confirm">Are you sure you want to use hint?</string>
    <string name="confirm_deduction">[ this will deduct points ]</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="Sign_up_google">Continue with Google</string>
    <string name="Enigma">E N I G M A</string>
    <string name="onlineCrypticHunt">Online cryptic hunt</string>
    <string name="profileSetup">Profile setup</string>
    <string name="enterUsername">How you want to be known as\n[this can’t be edited later]</string>
    <string name="next">Next</string>
    <string name="countdownString">The ultimate cryptic hunt starts in</string>
    <string name="semicolon">:</string>
    <string name="_01">01</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name:</string>
    <string name="email_id">Email ID:</string>
    <string name="questions_solved">Questions Solved:</string>
    <string name="rank">Rank:</string>
    <string name="score">Score:</string>
    <string name="sign_out">Sign out</string>
    <string name="angular">&lt; &gt;</string>
    <string name="anglur_cryptic">&lt; Online cryptic hunt &gt;</string>
    <string name="days">Days</string>
    <string name="sec">Sec</string>
    <string name="min">Min</string>
    <string name="hrs">Hrs</string>
    <string name="use_hint">Use Hint</string>
    <string name="response_is_close_to_the_answer">Response is close to the answer</string>
    <string name="cancel">Cancel</string>
    <string name="correct_response">Correct response</string>
    <string name="try_again">Try Again!</string>
    <string name="start">Start</string>
    <string name="_00">00</string>
    <string name="hint"><![CDATA[< Hint >]]></string>
    <string name="see_hint">See Hint</string>
    <string name="play">play</string>
    <string name="story">Story</string>
    <string name="closeanswer">closeanswer</string>
    <string name="skip">skip</string>
    <string name="title">title</string>
    <string name="instructions">instructions</string>
    <string name="are_you_sure_you_want_to_use_this_power">Are you sure you want to use this power?</string>
    <string name="please_enter_the_answer">Please Enter the Answer !</string>
    <string name="where_did_you_hear_about_us">Where did you hear about us?</string>
    <string name="are_you_a_college_student">Are you a college student</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="which_year_will_you_graduate_in">Which year will you graduate in?</string>
    <string name="point1">ENIGMA 7.0 is an online cryptic hunt where players solve a series of challenging riddles and puzzles to win exciting prizes.</string>
    <string name="point2">The points earned on answering each question are completely relative to the competition</string>
    <string name="point3">the earlier you solve a question, the higher your score will be. These points determine your position on the leaderboard.</string>
    <string name="point4">Upon using a hint, a one-time penalty of 10 points shall be applied on the points earned from the corresponding question.</string>
    <string name="point5">Every player will have xp (experience points) which can be redeemed to use power ups.</string>
    <string name="point6">xp does not play a part in determining the leaderboard position and is different from “points” mentioned.</string>
    <string name="point7">All players start with 0 xp and can collect a maximum of 100 xp.</string>
    <string name="point8">Players earn 10 xp every hour and 5 xp upon solving a question.</string>
    <string name="point9">There are three different power ups that players can redeem from the collected xp.</string>
    <string name="point10">The first power up, Free hint (consumes 50 xp), gives the player the hint to the question without the penalty to their points.</string>
    <string name="point11">The second power up, Skip question (consumes 75 xp), the players can skip the current question but will not be awarded any points. </string>
    <string name="point12">The third power up, Close answer (consumes 100 xp), the players can successfully move to the next question by entering a close answer and there will be a penalty of 10 points for the question.</string>
    <string name="point13">Any form of malpractice shall be dealt with extreme seriousness. We are constantly trying to enhance the experience and security of the system. Your cooperation is highly appreciated.</string>
    <string name="point14">[Press the play button]</string>
    <string name="point15">The xp stops generating after the 14th question</string>
    <string name="point16">You have one opportunity to redeem 20 xp for using any of our instagram filters and tagging us (@ieeevitvellore) during the event.</string>
    <string name="sponsors_partners"><![CDATA[Sponsors & partners]]></string>
    <string name="answer_cannot_contain_special_characters">Answer cannot contain special characters!!</string>
    <string name="no_internet_connection">Please check your Internet connection!</string>
    <string name="title_sponsor">Title Sponsor</string>
    <string name="sponsors">Sponsors</string>


</resources>