<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:rowCount="1"
    android:columnCount="3"
    android:forceDarkAllowed="false">

    <ImageButton
        android:id="@+id/hintPowerUp"
        style="@style/hintButtonStyle"
        android:contentDescription="@string/hint"
        android:src="@drawable/ic_hint_icon" />

    <ImageButton
        android:id="@+id/skipPowerUp"
        style="@style/hintButtonStyle"
        android:contentDescription="@string/skip"
        android:src="@drawable/ic_skip_icon" />

    <ImageButton
        android:id="@+id/closeAnswerPowerup"
        style="@style/hintButtonStyle"
        android:contentDescription="@string/closeanswer"
        android:src="@drawable/ic_close_ans" />

</LinearLayout>