<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/confirmPowerupDialogClose"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog_back"
    android:forceDarkAllowed="false">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/dialogBorderColor"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorview"
        style="@style/dialogTextStyle"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:gravity="center_horizontal"
        android:text="@string/are_you_sure_you_want_to_use_this_power"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.216"
       />

    <ImageButton
        android:id="@+id/powerup_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorview"
        app:layout_constraintVertical_bias="0.49"
        android:contentDescription="@string/yes" />

    <ImageButton
        android:id="@+id/powerup_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginVertical="30dp"
        android:background="@drawable/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorview"
        app:layout_constraintVertical_bias="0.49"
        android:contentDescription="@string/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>