<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fragment_back"
        tools:context=".view.auth.SignUpFragment">


        <ImageView
            android:id="@+id/zeroOne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="74dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="42dp"
            android:background="@drawable/zero_one"
            android:backgroundTint="@color/zeroOneTint"
            android:contentDescription="@string/_01"
            android:paddingTop="10dp"
            app:layout_constraintBottom_toTopOf="@+id/googleSignup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:id="@+id/enigma"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="51dp"
            android:layout_marginTop="108dp"
            android:layout_marginEnd="51dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#1DB818"
            android:gravity="center_horizontal|fill|fill_horizontal"
            android:scaleType="fitXY"
            android:scaleX="1.05"
            android:src="@drawable/ic_enigma"
            app:layout_constraintBottom_toTopOf="@+id/crypticText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/zeroOne"
            android:contentDescription="@string/Enigma" />

        <TextView
            android:id="@+id/googleSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="71dp"
            android:background="@drawable/sign_in_button_background"
            android:clickable="true"
            android:fontFamily="@font/inconsolata_regular"
            android:paddingStart="26dp"
            android:paddingTop="12dp"
            android:paddingEnd="26dp"
            android:paddingBottom="12dp"
            android:text="@string/Sign_up_google"
            android:textAllCaps="false"
            android:textColor="@color/buttonTextColor"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/strokeColor"
            app:strokeWidth="@dimen/strokeWidth" />

        <TextView
            android:id="@+id/crypticText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:foregroundGravity="fill_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/onlineCrypticHunt"
            android:textColor="@color/enigmaColor"
            android:textScaleX="1.1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enigma" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/sponsor_button_back"
            android:fontFamily="@font/ibm_plex_mono_regular"
            android:padding="5dp"
            android:text="@string/sponsors_partners"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/sponsor_button"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/googleSignup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>